# depend

./: .coveragerc  .deepsource.toml  .gitignore  Constants.py  LICENSE  README.md  cli.py  config.ini  constants.py  coverage.xml  dep_helper.py  dep_types.py  error.py  handle_env.py  helper.py  inspector.py  laxsemver.py  licence.py  mypy.ini  pytest.ini  requirements.txt  setup.cfg  test_inspector.py  test_licence.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: CI.yml  tox.yml
binaries/: BinaryWorker.py
db/: ElasticWorker.py  elastic_worker.py  postgres_worker.py
dependencies/: dep_types.py  helper.py
dependencies/cs/: cs_worker.py
dependencies/go/: go_worker.py
dependencies/go/darwin/: libgomod.dylib  libgomod.h
dependencies/go/win32/: _gomod.h
dependencies/java/: java_worker.py
dependencies/js/: js_worker.py
dependencies/php/: php_worker.py
dependencies/py/: py_helper.py  py_worker.py  setup_reader.py
dependencies/ruby/: ruby_worker.py
dependencies/rust/: rust_worker.py
lib/: LibWorker.py  setup_reader.py
src/depend/: __main__.py  cli.py  constants.py  dep_helper.py  inspector.py
src/depend/dependencies/: helper.py
src/depend/dependencies/cs/: cs_worker.py
src/depend/dependencies/go/: go_worker.py
src/depend/dependencies/js/: js_worker.py
src/depend/vcs/: github_worker.py
tests/: test_cli.py  test_db.py  test_dependency_files.py  test_inspector.py  test_versioning.py
tests/data/: config.ini  example_.gemspec  example_Gemfile  example_cargo.toml  example_composer.json  example_go.mod  example_npm_shrinkwrap.json  example_package.json  example_package.nuspec  example_package_lock.json  example_pom.xml  example_pyproject.toml  example_pyproject_poetry.toml  example_requirements.txt  example_setup.cfg  example_setup.py
vcs/: GithubWorker.py  github_worker.py
(+2 files in other folders)
