[metadata]
name = depend
version = 0.0.0
description = Package to extract license and latest version for third-party dependencies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deepsourcelabs/depend
author = Noble Saji Mathews
author_email = ch19b023@iittp.ac.in
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    beautifulsoup4==4.10.0
    PyGithub==1.55
    requests-cache==0.9.1
    pytest==6.2.5
    responses==0.17.0
    pytest_cov==3.0.0
    jmespath==0.10.0
    typer==0.4.1
    poetry==1.1.13
    toml==0.10.2
    pyarn==0.1.2
    PyYAML==6.0
    jsonschema==4.4.0
    python-dotenv==0.19.2
    dparse2==0.6.0
    pytest-dependency==0.5.1
    xmltodict==0.12.0
    requests~=2.27.1
    packaging
python_requires = >=3.10
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    depend=depend.cli:main

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    tox

[options.package_data]
depend =
	dependencies/go/win64/_gomod.dll
    dependencies/go/win64/_gomod.h
    dependencies/go/linux/libgomod.h
    dependencies/go/linux/libgomod.so
    dependencies/go/darwin/libgomod.h
    dependencies/go/darwin/libgomod.dylib

[tool:pytest]
addopts = --cov --cov-report=term-missing